--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,5 +1,5 @@
 
 	<footer id="footer">
-		<span class="copyright">&copy; {{ data.copy }} - <a href="{{ data.product }}">{{ data.app_title }}</a>. 
-		Design: <a href="http://html5up.net/aerial">HTML5 UP</a>.</span>
+		<span class="copyright">&copy; {{ data.copy }} - <a href="{{ data.product }}">{{ data.app_title }}</a>.
+		Based on design: <a href="http://html5up.net/aerial">HTML5 UP</a>.</span>
 	</footer>
