improved archive post list

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,9 +1,7 @@
 ---
-layout : layouts/base.njk
+layout : layouts/narrow.njk
 
 ---
-
-{% include 'navigation.njk' %}
 
 <article>
   <header>
@@ -19,5 +17,3 @@ layout : layouts/base.njk
     {{ content | safe }}
   </main>
 </article>
-
-{% include 'footer.njk' %}
