--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -128,6 +128,10 @@ input, select, textarea {
       /* color: #b0f8a2; [> green <] */
 		}
 
+a.accented {
+  color: var(--accent-colour);
+}
+
 /* Icon */
 
 	.icon {
