added syntax highlighting

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="{{ data.seo_desc }}" />
 
+    <link href="https://unpkg.com/prismjs@1.22.0/themes/prism-tomorrow.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css" />
 
 </head>
