--- a/src/index.njk
+++ b/src/index.njk
@@ -17,7 +17,7 @@ layout : layouts/base.njk
         Mateusz Tarnaski | Tarnas - software developer
       </p>
       <p>
-        <span style="text-decoration: line-through">One day there will be</span> I have a <a href="/blog/" class="accented">blog here.</a><br />Maybe project demos.<br/>Definitely snowboarding content.<br/>It will be awesome.
+        <span style="text-decoration: line-through">One day</span> there <span style="text-decoration: line-through">will be</span> is a <a href="/blog/" class="accented">blog here.</a><br />Maybe project demos.<br/>Definitely snowboarding content in the future.<br/>It will be awesome.
       </p>
       <nav>
         <ul>
