--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,7 +2,8 @@
 @import url("fontawesome-all.min.css");
 
 :root {
-  --accent-colour: #d94146;
+  --accent-colour-red: #d94146; /* redish */
+  --accent-colour-blue: #003369; /* blueish */
   --font-colour: #2C2C34;
 }
 
@@ -28,7 +29,16 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+}
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -116,21 +126,16 @@ input, select, textarea {
 		-webkit-transition: border-color 0.2s ease-in-out;
 		-ms-transition: border-color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out;
-		border-bottom: dotted 1px;
-		color: inherit;
+		border-bottom: solid 1px;
+    color: var(--accent-colour-blue);
 		outline: 0;
 		text-decoration: none;
 	}
 
-		a:hover {
-			border-color: transparent;
-      color: var(--accent-colour); /* red */
-      /* color: #b0f8a2; [> green <] */
-		}
-
-a.accented {
-  color: var(--accent-colour);
-}
+  a:hover {
+    border-color: var(--accent-colour-red);
+		border-bottom: dashed 1px;
+  }
 
 /* Icon */
 
@@ -552,8 +557,8 @@ a.accented {
 
 					#header nav a:hover:before {
 						background-color: rgba(255, 255, 255, 0.175);
-						color: var(--font-colour);
-					  border: solid 1px rgba(44,44,52, 0.5);
+						color: var(--accent-colour-blue);
+					  border: solid 1px var(--accent-colour-blue);
 					}
 
 				#header nav a:active {
@@ -563,7 +568,7 @@ a.accented {
 
 					#header nav a:active:before {
 						background-color: rgba(255, 255, 255, 0.35);
-						color: var(--font-colour);
+						color: var(--accent-colour-blue);
 					}
 
 				#header nav a span {
@@ -587,13 +592,30 @@ a.accented {
 
 main#content {
   width: 100%;
-  max-width: 800px;
+  max-width: 600px;
   margin: 2em auto;
 }
 
 .post-list li {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 2.5em;
+}
+
+.post-list li h1 {
+  font-size: 1.4em;
+  margin-bottom: .2em;
+}
+
+.post-list li p {
+  margin: .5em 0;
+  /* font-style: italic; */
+  text-align: center;
+}
+
+.post-list li .tag {
+  margin-right: 0;
 }
 
 /* Nav */
@@ -623,6 +645,25 @@ nav > a#home {
 /* Post */
 
 article {
+  text-align: justify;
+  width: 100%;
+}
+
+article blockquote {
+  padding-left: 1em;
+  border-left: 2px solid var(--font-colour);
+  font-style: italic;
+  margin: 2.4em 0;
+}
+
+article ul {
+  padding-left: 1.5em;
+  list-style-type: disc;
+  margin-bottom: .8em;
+}
+
+article a {
+  color: var(--accent-colour-blue);
   text-align: justify;
   width: 100%;
 }
@@ -668,8 +709,8 @@ article h2 {
   margin-right: .5em;
   font-size: .8em;
   line-height: 1.8;
-  color: blue;
-  border: 1px solid blue;
+  color: var(--accent-colour-blue);
+  border: 1px solid var(--accent-colour-blue);
 }
 
 time {
@@ -683,17 +724,17 @@ time {
 /* } */
 
 .tag.tag-journal {
-  color: var(--accent-colour);
-  border: 1px solid var(--accent-colour);
+  color: var(--accent-colour-red);
+  border: 1px solid var(--accent-colour-red);
 }
 
 /* .tag.tag-journal:hover { */
   /* color: white; */
-  /* background-color: var(--accent-colour); */
+  /* background-color: var(--accent-colour-blue); */
 /* } */
 
-@media screen and (max-width: 800px) {
-  body > article, body > nav {
+@media screen and (max-width: 820px) {
+  main#content, body > nav {
     padding: 0 1em;
   }
 }
