--- a/src/index.njk
+++ b/src/index.njk
@@ -3,9 +3,7 @@ layout : layouts/base.njk
 
 ---
 
-<div id="wrapper">
-
-  <div id="main">
+<main id="main">
 
     <!-- Header -->
     <header id="header">
@@ -17,7 +15,7 @@ layout : layouts/base.njk
         Mateusz Tarnaski | Tarnas - software developer
       </p>
       <p>
-        <span style="text-decoration: line-through">One day</span> there <span style="text-decoration: line-through">will be</span> is a <a href="/blog/" class="accented">blog here.</a><br />Maybe project demos.<br/>Definitely snowboarding content in the future.<br/>It will be awesome.
+        <span style="text-decoration: line-through">One day</span> there <span style="text-decoration: line-through">will be</span> is a <a href="/blog/" class="accented">blog here.</a><br />Maybe project demos?<br/>Hopefully <em>some</em> snowboarding content in the future.<br/>It will be awesome.
       </p>
       <nav>
         <ul>
@@ -28,7 +26,5 @@ layout : layouts/base.njk
       </nav>
     </header>
 
-  </div>
-
   {% include 'footer.njk' %}
-</div>
+</main>
