--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -535,27 +535,23 @@ input, select, textarea {
 
 main#content {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
+  padding: 0 0.5em;;
   margin: 2em auto;
 }
 
 .post-list li {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   margin-bottom: 2.5em;
 }
 
 .post-list li h1 {
   font-size: 1.4em;
   margin-bottom: .2em;
-  text-align: center;
 }
 
 .post-list li p {
   margin: .5em 0;
-  /* font-style: italic; */
-  text-align: center;
+  font-style: italic;
 }
 
 .post-list li .tag {
