added social links to post footer; added linkedin

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -19,6 +19,9 @@ layout : layouts/narrow.njk
   <aside id="meta">
     written in: <time>{{ writingTime }}</time><br/>
     author: {{ author }}
+    <nav class="socials">
+      {% include 'socials.njk' %}
+    </nav>
   </aside>
   <footer>
     <a href="/blog/" id="all-posts">all posts</a>
