--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -378,15 +378,22 @@ input, select, textarea {
 			opacity: 0.75;
 		}
 
-		#header nav {
+    aside nav.socials {
+      margin: 0;
+    }
+
+    aside nav.socials li {
+      height: unset;
+      width: unset;
+      line-height: unset;
+      margin-left: .4em;
+    }
+
+		nav.socials {
 			margin: 1.5em 0 0 0;
 		}
 
-			#header nav li {
-				-moz-animation: nav-icons 0.5s ease-in-out forwards;
-				-webkit-animation: nav-icons 0.5s ease-in-out forwards;
-				-ms-animation: nav-icons 0.5s ease-in-out forwards;
-				animation: nav-icons 0.5s ease-in-out forwards;
+			nav.socials li {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
@@ -398,90 +405,97 @@ input, select, textarea {
 				display: inline-block;
 				height: 5.35em;
 				line-height: 5.885em;
-				opacity: 0;
 				position: relative;
 				top: 0;
 				width: 5.35em;
 			}
 
-				#header nav li:nth-child(1) {
+      nav.socials.animated li {
+				opacity: 0;
+				-moz-animation: nav-icons 0.5s ease-in-out forwards;
+				-webkit-animation: nav-icons 0.5s ease-in-out forwards;
+				-ms-animation: nav-icons 0.5s ease-in-out forwards;
+				animation: nav-icons 0.5s ease-in-out forwards;
+      }
+
+				nav.socials li:nth-child(1) {
 					-moz-animation-delay: 0.5s;
 					-webkit-animation-delay: 0.5s;
 					-ms-animation-delay: 0.5s;
 					animation-delay: 0.5s;
 				}
 
-				#header nav li:nth-child(2) {
+				nav.socials li:nth-child(2) {
 					-moz-animation-delay: 0.75s;
 					-webkit-animation-delay: 0.75s;
 					-ms-animation-delay: 0.75s;
 					animation-delay: 0.75s;
 				}
 
-				#header nav li:nth-child(3) {
+				nav.socials li:nth-child(3) {
 					-moz-animation-delay: 1s;
 					-webkit-animation-delay: 1s;
 					-ms-animation-delay: 1s;
 					animation-delay: 1s;
 				}
 
-				#header nav li:nth-child(4) {
+				nav.socials li:nth-child(4) {
 					-moz-animation-delay: 1.25s;
 					-webkit-animation-delay: 1.25s;
 					-ms-animation-delay: 1.25s;
 					animation-delay: 1.25s;
 				}
 
-				#header nav li:nth-child(5) {
+				nav.socials li:nth-child(5) {
 					-moz-animation-delay: 1.5s;
 					-webkit-animation-delay: 1.5s;
 					-ms-animation-delay: 1.5s;
 					animation-delay: 1.5s;
 				}
 
-				#header nav li:nth-child(6) {
+				nav.socials li:nth-child(6) {
 					-moz-animation-delay: 3.75s;
 					-webkit-animation-delay: 3.75s;
 					-ms-animation-delay: 3.75s;
 					animation-delay: 3.75s;
 				}
 
-				#header nav li:nth-child(7) {
+				nav.socials li:nth-child(7) {
 					-moz-animation-delay: 4s;
 					-webkit-animation-delay: 4s;
 					-ms-animation-delay: 4s;
 					animation-delay: 4s;
 				}
 
-				#header nav li:nth-child(8) {
+				nav.socials li:nth-child(8) {
 					-moz-animation-delay: 4.25s;
 					-webkit-animation-delay: 4.25s;
 					-ms-animation-delay: 4.25s;
 					animation-delay: 4.25s;
 				}
 
-				#header nav li:nth-child(9) {
+				nav.socials li:nth-child(9) {
 					-moz-animation-delay: 4.5s;
 					-webkit-animation-delay: 4.5s;
 					-ms-animation-delay: 4.5s;
 					animation-delay: 4.5s;
 				}
 
-				#header nav li:nth-child(10) {
+				nav.socials li:nth-child(10) {
 					-moz-animation-delay: 4.75s;
 					-webkit-animation-delay: 4.75s;
 					-ms-animation-delay: 4.75s;
 					animation-delay: 4.75s;
 				}
 
-			#header nav a {
+			nav.socials a {
 				-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 				-webkit-touch-callout: none;
 				border: 0;
 				display: inline-block;
 			}
 
-				#header nav a:before {
+				nav.socials.animated a:before {
 					-moz-transition: all 0.2s ease-in-out;
 					-webkit-transition: all 0.2s ease-in-out;
 					-ms-transition: all 0.2s ease-in-out;
@@ -498,27 +512,27 @@ input, select, textarea {
 					width: 2.5em;
 				}
 
-				#header nav a:hover {
+				nav.socials a:hover {
 					font-size: 1.1em;
 				}
 
-					#header nav a:hover:before {
+					nav.socials.animated a:hover:before {
 						background-color: rgba(255, 255, 255, 0.175);
 						color: var(--accent-colour-blue);
 					  border: solid 1px var(--accent-colour-blue);
 					}
 
-				#header nav a:active {
+				nav.socials a:active {
 					font-size: 0.95em;
 					background: none;
 				}
 
-					#header nav a:active:before {
+					nav.socials a:active:before {
 						background-color: rgba(255, 255, 255, 0.35);
 						color: var(--accent-colour-blue);
 					}
 
-				#header nav a span {
+				nav.socials a span {
 					display: none;
 				}
 
