added date to archive list

--- a/src/archive.njk
+++ b/src/archive.njk
@@ -11,8 +11,9 @@ permalink: /blog/
     <a href="{{ post.url | url }}" style="font-size: 1.2em">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
     </h1>
     <p>
-      {{ post.data.description }}
+       {{ post.data.description }}
     </p>
+    <time datetime="{{ post.data.date | htmlDateISOString }}">[{{ post.data.date | htmlDateString }}]</time>
   </li>
 {% endfor %}
 </ul>
