--- a/src/_includes/tag.njk
+++ b/src/_includes/tag.njk
@@ -1,3 +1,5 @@
-<span class="tag tag-{{ tag }}">
-  {{ tag }}
-</span>
+<a href="/tag/{{ tag }}/" class="tag">
+  <span class="tag tag-{{ tag }}">
+    {{ tag }}
+  </span>
+</a>
