add pax magnifica as a project demo

--- a/src/index.njk
+++ b/src/index.njk
@@ -12,10 +12,12 @@ layout : layouts/base.njk
         {{ data.app_title }}
       </h1>
       <p>
-        Mateusz Tarnaski | Tarnas - software developer
+        Mateusz Tarnaski | Tarnas - web software developer
+        <br/>
+        (nodejs, react, TypeScript, .net core)
       </p>
       <p>
-        <span style="text-decoration: line-through">One day</span> there <span style="text-decoration: line-through">will be</span> is a <a href="/blog/" class="accented">blog here.</a><br />Maybe project demos?<br/>Hopefully <em>some</em> snowboarding content in the future.<br/>It will be awesome.
+        <span style="text-decoration: line-through">One day</span> there <span style="text-decoration: line-through">will be</span> is a <a href="/blog/" class="accented">blog here.</a><br /><br /><span style="text-decoration: line-through">Maybe project demos?</span><br/>Check out <a href="https://paxmagnifica.com">Pax Magnifica</a>, Twilight Imperium 4 companion app
       </p>
       <nav class="socials animated">
         {% include 'socials.njk' %}
